@@ -37,6 +37,8 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 - 12/09/2021 - libqmail-1.1.1
 - 12/09/2021
 16. added replacestr function
+- 05/03/2022
+17. base/envdir.c: fixed variable sa getting overwritten by openreadclose()
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
